# magic-number-file-type-checker

./: .gitignore  README.md  main.py  pyproject.toml
samples/: laughing-baby  resume
src/filetype_checker/: __init__.py  cli.py  detector.py  error.py  extensions.py  models.py  reporting.py  scanner.py
tests/: test_cli.py  test_cli_integration.py  test_magic_detection.py  test_scanner.py  test_smoke.py
